Фикс для автоматической проверки

--- a/catalog.html
+++ b/catalog.html
@@ -55,7 +55,7 @@
 
     <main data-test="main" class="catalog-main">
 
-      <section data-test="filter" class="filter">
+      <section class="filter">
         <header class="catalog-header-filter">
           <h1 class="catalog-header-title">Гостиницы Седоны</h1>
           <ul class="breadcrumbs">
@@ -70,7 +70,7 @@
           </ul>
         </header>
         <h2 class="visually-hidden">Фильтр</h2>
-        <form class="filter-form" action="https://echo.htmlacademy.ru/" method="get">
+        <form data-test="filter" class="filter-form" action="https://echo.htmlacademy.ru/" method="get">
           <fieldset class="filter-group">
             <legend class="filter-title">Инфраструктура:</legend>
               <label class="control">
