Фикс для автоматической проверки

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 Седона — не аттракцион для<br> туристов, там течёт своя<br> жизнь
               </p>
             </div>
-            <img src="images/photo_1.jpg" width="800" height="385" alt="Здание с Американским флагом">
+            <img src="images/photo_1.jpeg" width="800" height="385" alt="Здание с Американским флагом">
           </li>
           <li class="advantages-item">
             <div class="advantages-content">
@@ -105,7 +105,7 @@
             </div>
           </li>
           <li class="advantages-item bridge">
-            <img src="images/photo_2.jpg" width="800" height="385" alt="Скалы">
+            <img src="images/photo_2.jpeg" width="800" height="385" alt="Скалы">
             <div class="advantages-content">
               <h3 class="advantages-title">Там есть<br> мост дьявола</h3>
               <p class="advantages-description">
