Фикс для автоматической проверки

--- a/index.html
+++ b/index.html
@@ -213,8 +213,8 @@
     </footer>
 
     <!-- Модалка -->
-    <div class="modal-overlay" id="modal">
-      <div data-test="modal" class="modal">
+    <div data-test="modal" class="modal-overlay">
+      <div class="modal">
         <button class="close-modal" type="button">
           <span class="visually-hidden">Закрыть модальное окно</span>
         </button>
