--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
     </footer>
 
     <!-- Модалка -->
-    <div data-test="modal" class="modal-overlay">
+    <div data-test="modal" class="modal-overlay" id="modal">
       <div class="modal">
         <button class="close-modal" type="button">
           <span class="visually-hidden">Закрыть модальное окно</span>
