Фикс для автоматической проверки

--- a/catalog.html
+++ b/catalog.html
@@ -254,22 +254,34 @@
         </ol>
         <ul class="pagination">
           <li class="pagination-item">
-            <a class="btn btn-light pagination-link pagination-current">1</a>
+            <a class="btn btn-light pagination-link pagination-current">
+              <span>1</span>
+            </a>
           </li>
           <li class="pagination-item">
-            <a class="btn btn-blue pagination-link" href="#">2</a>
+            <a class="btn btn-blue pagination-link" href="#">
+              <span>2</span>
+            </a>
           </li>
           <li class="pagination-item">
-            <a class="btn btn-blue pagination-link" href="#">3</a>
+            <a class="btn btn-blue pagination-link" href="#">
+              <span>3</span>
+            </a>
           </li>
           <li class="pagination-item">
-            <a class="btn btn-blue pagination-link" href="#">4</a>
+            <a class="btn btn-blue pagination-link" href="#">
+              <span>4</span>
+            </a>
           </li>
           <li class="pagination-item">
-            <a class="pagination-link pagination-skip">...</a>
+            <a class="pagination-link pagination-skip">
+              <span>...</span>
+            </a>
           </li>
           <li class="pagination-item">
-            <a class="btn btn-blue pagination-link" href="#">10</a>
+            <a class="btn btn-blue pagination-link" href="#">
+              <span>10</span>
+            </a>
           </li>
         </ul>
       </section>
