Иправления по критериям

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link btn btn-brown btn-sm" href="#">
+            <a class="btn btn-brown btn-sm" href="#">
               Хочу сюда!
             </a>
           </li>
@@ -169,7 +169,7 @@
             Укажите ваш email
           </label>
           <input class="subscribe-email" required placeholder="Ваш e-mail" type="email" id="subscribe-email" name="email">
-          <button class="btn btn-blue btn-lg btn-send-email" type="submit">Подписаться</button>
+          <button type="submit" class="btn btn-blue btn-lg btn-send-email">Подписаться</button>
         </form>
       </section>
     </main>
@@ -217,7 +217,7 @@
     <!-- Модалка -->
     <div data-test="modal" class="modal-overlay" id="modal">
       <div data-test="modal" class="modal">
-        <button class="close-modal" type="button">
+        <button type="button" class="close-modal">
           <span class="visually-hidden">Закрыть модальное окно</span>
         </button>
         <h1 class="modal-title">Поиск гостиницы в Седоне</h1>
@@ -272,7 +272,7 @@
               </button>
             </div>
           </fieldset>
-          <button class="btn btn-lg btn-blue" type="submit">Найти</button>
+          <button type="submit" class="btn btn-lg btn-blue">Найти</button>
         </form>
       </div>
     </div>
