--- a/catalog.html
+++ b/catalog.html
@@ -46,7 +46,7 @@
             </a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link btn btn-brown btn-sm" href="#">
+            <a class="btn btn-brown btn-sm" href="#">
               Хочу сюда!
             </a>
           </li>
@@ -111,14 +111,14 @@
           <fieldset class="filter-group group-range-amount">
             <legend class="filter-title">Стоимость, ₽:</legend>
             <div class="filter-amount-range">
-              <div class="filter-amount-range-wrapper">
+              <label class="filter-amount-range-wrapper">
                 <input class="input-amount" type="number" name="from-amount" value="0">
                 <span>от</span>
-              </div>
-              <div class="filter-amount-range-wrapper">
+              </label>
+              <label class="filter-amount-range-wrapper">
                 <input class="input-amount" type="number" name="to-amount" value="9000">
                 <span>до</span>
-              </div>
+              </label>
             </div>
             <div class="range-amount">
               <div class="range-bar">
@@ -132,8 +132,8 @@
             </div>
           </fieldset>
           <div class="filter-form-actions">
-            <button class="btn btn-blue btn-sm" type="submit">Применить</button>
-            <button class="btn btn-transparent btn-sm" type="reset" >Сбросить</button>
+            <button type="submit" class="btn btn-blue btn-sm">Применить</button>
+            <button type="reset" class="btn btn-transparent btn-sm">Сбросить</button>
           </div>
         </form>
       </section>
@@ -202,7 +202,7 @@
               <span class="catalog-card-apartments-type">Гостиница</span>
               <span class="catalog-card-price">От 4000 ₽</span>
               <a class="btn btn-brown btn-sm" href="#">подробнее</a>
-              <button class="btn btn-blue btn-sm">в избранное</button>
+              <button type="button" class="btn btn-blue btn-sm">в избранное</button>
               <span class="catalog-card-star star-4" data-stars="4">
                 <b class="visually-hidden">4 звезды</b>
               </span>
@@ -217,7 +217,7 @@
               <span class="catalog-card-apartments-type">Гостиница</span>
               <span class="catalog-card-price">От 5000 ₽</span>
               <a class="btn btn-brown btn-sm" href="#">подробнее</a>
-              <button class="btn btn-green btn-sm">в избранном</button>
+              <button type="button" class="btn btn-green btn-sm">в избранном</button>
               <span class="catalog-card-star star-4">
                 <b class="visually-hidden">4 звезды</b>
               </span>
@@ -231,7 +231,7 @@
               <span class="catalog-card-apartments-type">Гостиница</span>
               <span class="catalog-card-price">От 2500 ₽</span>
               <a class="btn btn-brown btn-sm" href="#">подробнее</a>
-              <button class="btn btn-blue btn-sm">в избранное</button>
+              <button type="button" class="btn btn-blue btn-sm">в избранное</button>
               <span class="catalog-card-star star-3">
                 <b class="visually-hidden">3 звезды</b>
               </span>
@@ -245,7 +245,7 @@
               <span class="catalog-card-apartments-type">Гостиница</span>
               <span class="catalog-card-price">От 1500 ₽</span>
               <a class="btn btn-brown btn-sm" href="#">подробнее</a>
-              <button class="btn btn-blue btn-sm">в избранное</button>
+              <button type="button" class="btn btn-blue btn-sm">в избранное</button>
               <span class="catalog-card-star star-2">
                 <b class="visually-hidden">2 звезды</b>
               </span>
@@ -303,7 +303,7 @@
             Укажите ваш email
           </label>
           <input class="subscribe-email" required placeholder="Ваш e-mail" type="email" id="subscribe-email" name="email">
-          <button class="btn btn-blue btn-lg btn-send-email" type="submit">Подписаться</button>
+          <button type="submit" class="btn btn-blue btn-lg btn-send-email">Подписаться</button>
         </form>
       </section>
     </main>
